[project]
name = "mcp-quadrant"
version = "1.0.0"
description = "MCP server for coordinate conversion tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "fastmcp",
    "uvicorn",
    "starlette",
]

[project.optional-dependencies]
geocoding = [
    "geopy",
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = []